--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
                 width: 80%;
                 height: 95%;
             }
+            table#viewTable tr:nth-child(even) {
+                background-color: #eee;
+            }
+            table#viewTable tr:nth-child(odd) {
+                background-color: #fff;
+            }
+            table#viewTable th {
+                background-color: black;
+                color: white;
+                #padding: 15px;
+                text-align: center;
+            }
+            table#viewTable td {
+                #padding: 15px;
+                text-align: left;
+            }
+
         </style>
     </head>
     <body>
@@ -33,6 +50,11 @@
                         <label>Parsed code here</label>
                     </div>
                 </td>
+                <td>
+                    <div>
+                        <label>Table view</label>
+                    </div>
+                </td>
             </tr>
             <tr>
                 <td>
@@ -43,6 +65,11 @@
                 <td>
                     <div class="textAreaWrapper">
                         <textarea id="parsedCode" title="Parse code"></textarea>
+                    </div>
+                </td>
+                <td>
+                    <div >
+                        <table id="viewTable" title="view table"></table>
                     </div>
                 </td>
             </tr>
